# terminal

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  NOTICE.md  README.md  biome.jsonc  flake.nix  justfile  package.json  pkgOmniTerminal.nix
.changeset/: add-serve-subcommand.md  fix-aur-wasm-serve.md  fix-ci-wasm-build.md  fix-mobile-browser-support.md  fix-opacity-tui-backgrounds.md  fix-panic-abort-segfault.md  fix-terminfo-color-priority.md  fix-wayland-clipboard-crash.md  initial-release.md  process-exit-ux-ios-fix.md
.github/workflows/: release.yml  sync.yml  test.yml
.husky/: pre-commit
copa/: Cargo.toml  README.md
copa/src/: table.rs
corcovado/: Cargo.toml  README.md
corcovado/src/: stream.rs
corcovado/src/sys/windows/: udp.rs
corcovado/test/: mod.rs
extra/man/: Makefile  README.md  omni-terminal-bindings.5.scd  omni-terminal.1.scd  omni-terminal.5.scd
frontends/android/: .gitignore  STORE_LISTING.md  build.gradle.kts  gradlew  keystore.properties.example  settings.gradle.kts
frontends/android-lib/: Cargo.toml
frontends/android-lib/src/: lib.rs  renderer.rs  terminal.rs
frontends/android/app/: build.gradle.kts  proguard-rules.pro
frontends/android/app/src/main/: AndroidManifest.xml
frontends/android/app/src/main/res/drawable/: btn_terminal.xml  btn_terminal_active.xml  ic_launcher.xml  ic_launcher_foreground.xml
frontends/android/app/src/main/res/layout/: activity_connect.xml  activity_terminal.xml  dialog_onboarding.xml
frontends/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontends/android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
frontends/android/scripts/: build-bootstrap.sh  extract-proot-loader.sh
frontends/omni-terminal/: Cargo.toml
frontends/omni-terminal/src/: application.rs  cli.rs  hints.rs  main.rs  panic.rs  scheduler.rs  watcher.rs
frontends/omni-terminal/src/bindings/: kitty_keyboard.rs  mod.rs
frontends/omni-terminal/src/context/: grid.rs  mod.rs  renderable.rs  title.rs
frontends/omni-terminal/src/mouse/: mod.rs
frontends/omni-terminal/src/renderer/: font_cache.rs  mod.rs  navigation.rs  search.rs  utils.rs
frontends/omni-terminal/src/router/: mod.rs  window.rs
frontends/omni-terminal/src/router/routes/: assistant.rs  dialog.rs  welcome.rs
frontends/omni-terminal/src/screen/: hint.rs  mod.rs  touch.rs
frontends/omni-terminal/src/serve/: mod.rs  server.rs  session.rs
frontends/wasm/: CHANGELOG.md  Cargo.toml  Makefile  index.html  package.json  tsconfig.json
frontends/wasm/.changeset/: config.json
frontends/wasm/src/: index.ts  lib.rs  renderer.rs  terminal.rs
frontends/wasm/src/scripts/: build.ts
frontends/web-server/: Cargo.toml
frontends/web-server/src/: main.rs  session.rs
misc/: dev.omni.Terminal.metainfo.xml  omni-terminal.desktop  omni-terminal.termcap  omni-terminal.terminfo
misc/osx/OmniTerminal.app/Contents/: Info.plist
misc/osx/OmniTerminal.app/Contents/Resources/: icon-classic.icns
misc/packaging/aur/omni-terminal/: PKGBUILD
misc/packaging/aur/omni-terminal-bin/: PKGBUILD
misc/packaging/aur/omnidotdev-terminal/: PKGBUILD
misc/packaging/aur/omnidotdev-terminal-bin/: PKGBUILD
misc/packaging/flatpak/: dev.omni.Terminal.yml
misc/packaging/homebrew/: omni-terminal.rb
misc/packaging/winget/: Omni.Terminal.installer.yaml  Omni.Terminal.locale.en-US.yaml  Omni.Terminal.yaml
misc/scripts/: test-iterm2-image-protocol.sh
misc/windows/: omni-terminal.wxs
scripts/: syncVersion.ts
sugarloaf/: Cargo.toml  README.md  build.rs
sugarloaf/examples/: f16_test.rs  image.rs  layer.rs  line_height.rs  multi_text.rs  text.rs  transparent.rs
sugarloaf/src/: lib.rs  sugarloaf.rs
sugarloaf/src/components/: mod.rs
sugarloaf/src/components/core/: shapes.rs
sugarloaf/src/components/filters/: mod.rs
sugarloaf/src/components/rich_text/: compositor.rs  mod.rs  rich_text.wgsl  rich_text_f32.wgsl
sugarloaf/src/context/: mod.rs
sugarloaf/src/font/: cjk_metrics_tests.rs  loader.rs  metrics.rs  mod.rs
sugarloaf/src/font/fallbacks/: mod.rs
sugarloaf/src/font_introspector/: attributes.rs
sugarloaf/src/font_introspector/scale/: image.rs  mod.rs
sugarloaf/src/font_introspector/text/cluster/: char.rs
sugarloaf/tests/: test_example_text.rs
teletypewriter/: Cargo.toml  README.md
teletypewriter/src/unix/: mod.rs
teletypewriter/src/windows/: child.rs  conpty.rs
terminal-backend/: Cargo.toml
terminal-backend/examples/: advance_until_terminated_benchmark.rs  batch_utf8_benchmark.rs  enhanced_batched_parser_test.rs  parser_comparison_benchmark.rs  simd_performance_test.rs  terminal_usage_benchmark.rs  utf8_benchmark.rs
terminal-backend/src/: clipboard.rs  lib.rs  simd_utf8.rs
terminal-backend/src/config/: defaults.rs  mod.rs  window.rs
terminal-backend/src/config/colors/: README.md
terminal-backend/src/crosswords/: mod.rs  search.rs  square.rs
terminal-backend/src/crosswords/grid/: resize.rs
terminal-backend/src/error/: mod.rs
terminal-backend/src/event/: mod.rs
terminal-backend/src/performer/: handler.rs  mod.rs
terminal-emulator/: Cargo.toml
terminal-emulator/src/: grid.rs  lib.rs  renderer.rs
terminal-proc-macros/: Cargo.toml
terminal-window/: Cargo.toml  README.md  build.rs
terminal-window/examples/: child_window.rs  control_flow.rs  pump_events.rs  run_on_demand.rs  window.rs  x11_embed.rs
terminal-window/examples/util/: fill.rs
terminal-window/src/: cursor.rs  event.rs  event_loop.rs  icon.rs  keyboard.rs  lib.rs  window.rs
terminal-window/src/platform/: macos.rs  run_on_demand.rs  windows.rs  x11.rs
terminal-window/src/platform_impl/linux/wayland/window/: mod.rs
terminal-window/src/platform_impl/macos/: app.rs  app_delegate.rs  cursor.rs  dispatcher.rs  display_link.rs  event.rs  menu.rs  monitor.rs  view.rs  window.rs  window_delegate.rs
terminal-window/src/platform_impl/windows/: dark_mode.rs  definitions.rs  drop_handler.rs  monitor.rs  util.rs  window.rs
terminal-window/tests/: send_objects.rs  sync_object.rs
(+10 files in other folders)
