[workspace]
members = [
    "sugarloaf",
    "teletypewriter",
    "corcovado",
    "copa",
    "terminal-proc-macros",
    "terminal-backend",
    "terminal-emulator",
    "terminal-window",
    "frontends/omni-terminal",
    "frontends/wasm",
    "frontends/web-server",
    "frontends/android-lib",
]
default-members = [
    "sugarloaf",
    "teletypewriter",
    "corcovado",
    "copa",
    "terminal-proc-macros",
    "terminal-backend",
    "terminal-emulator",
    "terminal-window",
    "frontends/omni-terminal",
    "frontends/web-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Omni LLC <team@omni.dev>"]
edition = "2021"
license = "MIT"
keywords = ["graphics", "terminal", "application"]
# Minimal stable rust version (MSRV)
rust-version = "1.92.0"
repository = "https://github.com/omnidotdev/terminal"
homepage = "https://terminal.omni.dev"
documentation = "https://github.com/omnidotdev/terminal#readme"
readme = "README.md"

[workspace.dependencies]
# Note: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
# Sugarloaf example uses path when used locally, but uses
# version from crates.io when published.
teletypewriter = { path = "teletypewriter", version = "0.1.0" }
terminal-backend = { path = "terminal-backend", version = "0.1.0", default-features = false }
terminal-window = { path = "terminal-window", version = "0.1.0", default-features = false }
terminal-emulator = { path = "terminal-emulator", version = "0.1.0" }
sugarloaf = { path = "sugarloaf", version = "0.1.0" }

# Own dependencies
copa = { path = "copa", default-features = true, version = "0.1.0" }
terminal-proc-macros = { path = "terminal-proc-macros", version = "0.1.0" }
corcovado = { path = "corcovado", version = "0.1.0" }
raw-window-handle = { version = "0.6.2", features = ["std"] }
parking_lot = { version = "0.12.4", features = [
    "nightly",
    "hardware-lock-elision",
] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"

# unicode-width = "0.2.0"
unicode-width = { package = "unicode-width-16", version = "0.1.0" }
base64 = "0.22.1"
image_rs = { package = "image", version = "0.25.5", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "webp",
    "bmp",
] }
regex = "1.11.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
wgpu = "28.0.0"
libc = "0.2.174"
smol_str = "0.3.2"
futures = "0.3.31"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"
env_logger = "0.11.8"
console_log = "0.2.2"
bitflags = "2.9.0"
iovec = "0.1.4"
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
objc = { package = "objc-rs", version = "0.2.8" }
memmap2 = "0.9.5"
url = "2.5.4"
criterion = { version = "0.6.0", features = ["html_reports"] }
dashmap = "6.1.0"

[profile.release]
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
debug = "full"              # No one needs an undebuggable release binary
codegen-units = 1
incremental = false
lto = false                 # LTO causes segfault in copypasta Wayland clipboard FFI (smithay-clipboard unsafe code)
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
