[package]
name = "omni-terminal-android"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sugarloaf = { path = "../../sugarloaf" }
copa = { path = "../../copa" }
terminal-emulator = { path = "../../terminal-emulator" }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
jni = "0.21"
ndk = { version = "0.9", features = ["api-level-26"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
android_logger = "0.14"
log = "0.4"
tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
serde_json = "1"
nix = { version = "0.29", features = ["fs", "process", "signal", "term"] }
libc = { workspace = true }
