[package]
name = "web-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
description = "WebSocket PTY server for Omni Terminal web frontend"

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
teletypewriter = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs"] }
futures = { workspace = true }
